--- a/bio.html
+++ b/bio.html
@@ -41,22 +41,13 @@
                 </nav>
 
                 <article>
-                    <header>
-                        <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-                    </header>
                     <section>
                         <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                        <p>Enderby's Room are a London-based indie-folk band whose delicate harmonies, unusual instruments and vivid storytelling have been described as 'intricately woven and desperately beautiful' by Folkroom Records. Enderby's Room features Dan Mayfield (guitar, ukulele), Emma Winston (harmonium, accordion), James Humphries (percussion, banjo) and Donal Sweeney (double bass).&nbsp;</p>
+                        <p><q>At times they capture the sumptuous melancholia of Low; at others, they're finding new shapes for indie folk.</q> <cite>--How Does It Feel To Be Loved</cite></p>
+                        <p><q>[An] accomplished batch of songs...their soft folky sound was as good as anything else I'd hear all weekend.</q> <cite>--Neon Filler, Indietracks Festival 2013</cite></p>
+                        <p><img id="bandphoto" class="cms-editable" src="/cms-assets/zoom-cropped-images/388282_3_bandphoto.jpg?rand=0.5949937829282135" alt="Enderby's Room band photo" /></p>
                     </section>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
                 </article>
 
             </div> <!-- #main -->
