--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Enderby's Room</h1>
+                <h1 class="title"><a href="index.html">Enderby's Room</a></h1>
             </header>
         </div>
 
