--- a/bio.html
+++ b/bio.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -44,7 +45,7 @@
                         <p>Enderby's Room are a London-based indie-folk band whose delicate harmonies, unusual instruments and vivid storytelling have been described as 'intricately woven and desperately beautiful' by Folkroom Records. Enderby's Room features Dan Mayfield (guitar, ukulele, vocals), Emma Winston (harmonium, accordion, vocals), James Humphries (percussion, banjo), Donal Sweeney (double bass), Sophie Koonin (guitar, Omnichord, vocals), and Nathan Thomas (French horn).</p>
                         <p><blockquote>At times they capture the sumptuous melancholia of Low; at others, they're finding new shapes for indie folk.</blockquote> <cite>--How Does It Feel To Be Loved</cite></p>
                         <p><blockquote>[An] accomplished batch of songs...their soft folky sound was as good as anything else I'd hear all weekend.</blockquote> <cite>--Neon Filler, Indietracks Festival 2013</cite></p>
-                        <p><img id="bandphoto" class="cms-editable" src="/cms-assets/zoom-cropped-images/388282_3_bandphoto.jpg?rand=0.5949937829282135" alt="Enderby's Room band photo" /></p>
+                        <p><img id="bandphoto" class="cms-editable" src="img/bandphoto.jpg" alt="Enderby's Room band photo" /></p>
                     </section>
                 </article>
 
