--- a/bio.html
+++ b/bio.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -30,12 +31,13 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                   <nav>
+                <nav>
                     <ul>
                         <li><a href="music.html">Music</a></li>
                         <li><a href="bio.html">Bio</a></li>
                         <li><a href="shows.html">Shows</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li class="social"><a href="https://www.facebook.com/EnderbysRoom"><i class="fa fa-facebook-square" title="facebook"></i></a> <a href="http://www.twitter.com/Enderbys_Room"><i class="fa fa-twitter-square" title="twitter"></i></a></li>
                     </ul>
                 </nav>
 
