--- a/bio.html
+++ b/bio.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+
+        <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <!--[if lt IE 7]>
