added photo of dan

--- a/bio.html
+++ b/bio.html
@@ -47,6 +47,8 @@
                 <article>
                     <section>
                         <h2>Biography</h2>
+                         <p><img id="bandphoto" class="cms-editable" src="img/dan.jpg" alt="Dan photo" /></p>
+
                         <p>Enderby’s Room is fiddle player Dan Mayfield, once from rural Lincolnshire, but he has now found home living in London. His folk tinged songs reflect on his traditional folk upbringing. Mayfield has played violin for many artists including Daniel Johnston, Darren Hayman, The Wave Pictures, Allo Darlin’ and the Belles of London City morris dancers.</p>
 
                         <p>Over the past ten years he has <a href="http://shop.fikarecordings.com/album/enderbys-room">gently built up a collection of his own songs</a>, which he performs with his band Enderby’s Room. The name comes from an Anthony Burgess character called Mr Enderby who composed his prose inside the toilet. The band’s make up has been constantly evolving; around 30 different individuals have been a part of Enderby’s Room over the last decade, before settling on the current 5 piece lineup.</p>
