make dan photo smaller

--- a/bio.html
+++ b/bio.html
@@ -47,7 +47,7 @@
                 <article>
                     <section>
                         <h2>Biography</h2>
-                         <p><img id="bandphoto" class="cms-editable" src="img/dan.jpg" alt="Dan photo" /></p>
+                         <p><img id="bandphoto" class="cms-editable" src="img/dan.jpg" alt="Dan photo" style="max-width: 100%;" /></p>
 
                         <p>Enderby’s Room is fiddle player Dan Mayfield, once from rural Lincolnshire, but he has now found home living in London. His folk tinged songs reflect on his traditional folk upbringing. Mayfield has played violin for many artists including Daniel Johnston, Darren Hayman, The Wave Pictures, Allo Darlin’ and the Belles of London City morris dancers.</p>
 
